sass/base/elements/_body.scss
body {
	background: $color__background-body; // Fallback for when there is no custom background color defined.
	width: 100%;
	height: 100%;
}

/* For footer to sit at the bottom of the page
* and fill pages where the content is too short to fill the screen height
* keep flex-grow in site-main
*/
.site {
	display: flex;
	min-height: 100vh;
	flex-direction: column;
}

.site-main{
	flex-grow: 1;
	background-color: #cfcfcf;
    background-size: 13px 13px, 29px 29px, 37px 37px, 53px 53px;
    background-image: linear-gradient(0, rgba(255, 255, 255, .07) 30%, transparent 40%), linear-gradient(0, rgba(255, 255, 255, .13) 30%, transparent 40%), linear-gradient(0, transparent 30%, rgba(255, 255, 255, .17) 40%), linear-gradient(0, transparent 30%, rgba(255, 255, 255, .19) 40%);
	box-shadow: 0 -4px 5px rgba(0, 0, 0, 0.3);
}

article, section, table{
	margin: 0 auto;
	width: 90%;

	@media screen and (min-width: $mq_breakpoint_medium) {
		width: 85%;
	}
}

section.meet-others{
	overflow: auto;
}

